# coda

./: .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  tsconfig.json
.github/workflows/: ci.yml
.scratchpad/openrouter-risk-validation/: capture-continuation.sh  capture-tool-call.sh  glm-5.2-chunks.json  glm-5.2-continuation-request.json  glm-5.2-continuation.sse  glm-5.2-request.json  glm-5.2-tool-call.sse  grok-4.5-chunks.json  grok-4.5-continuation-request.json  grok-4.5-continuation.sse  grok-4.5-request.json  grok-4.5-tool-call.sse  kimi-k3-chunks.json  kimi-k3-continuation-request.json  kimi-k3-continuation.sse  kimi-k3-request.json  kimi-k3-tool-call.sse
app/coda_cli/: Cargo.toml
app/coda_cli/src/: __main.rs  _main.rs  ask_user.rs  main.rs  session.rs  storage.rs
app/coda_server/: Cargo.toml  build.rs  coda-server.example.toml
app/coda_server/src/: agent-skills-prompt.md  agents.rs  ask_user.rs  config.rs  hub.rs  hub_tests.rs  lib.rs  mcp.rs  notices.rs  rpc.rs  storage.rs  system-prompt.md  transport.rs  wire.rs
app/coda_web/: .gitignore  .oxlintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/coda_web/src/: App.tsx  index.css  main.tsx
app/coda_web/src/components/: approval-panel.tsx  background-tasks.tsx  composer.tsx  context-usage.tsx  image-lightbox.tsx  logo.tsx  markdown.tsx  model-selector.tsx  session-utils.ts  sidebar.tsx  status-dot.tsx  theme-toggle.tsx  transcript.tsx
app/coda_web/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  popover.tsx  separator.tsx  textarea.tsx
app/coda_web/src/lib/: protocol.ts  rpc.ts  session.ts  theme.ts  utils.ts
app/coda_web/src/store/: model-preferences.ts  new-session.ts  session.ts  utils.ts
app/coda_web/test/: model-preferences.test.mjs  model-preferences.test.ts
coda_examples/: Cargo.toml
coda_examples/src/: ask_user.rs  config.rs  lib.rs  mcp.rs  storage.rs  system-prompt.md  wire.rs
coda_examples/tests/: e2e.rs
crates/coda_agent/: Cargo.toml
crates/coda_agent/src/: agent.rs  lib.rs  persist.rs  runtime.rs  session.rs  spec.rs  tools.rs
crates/coda_agent/src/runtime/: driver.rs  driver_tests.rs
crates/coda_agent/src/tools/: fs.rs  grep.rs  shell.rs  todo.rs
crates/coda_agent/tests/: e2e.rs  session.rs
crates/coda_core/: Cargo.toml
crates/coda_core/src/: lib.rs  llm.rs  tool.rs
crates/coda_mcp/: Cargo.toml
crates/coda_mcp/src/: lib.rs  tool_adapter.rs
crates/coda_openai/: Cargo.toml
crates/coda_openai/src/: lib.rs
crates/coda_openai/tests/: openrouter_smoke.rs
crates/coda_openai/tests/fixtures/: openrouter-glm-5.2.json  openrouter-grok-4.5.json  openrouter-kimi-k3.json
crates/coda_runtime/: Cargo.toml
crates/coda_runtime/src/: lib.rs  old.rs
crates/coda_skills/: Cargo.toml
crates/coda_skills/src/: error.rs  lib.rs  models.rs  parser.rs
crates/coda_tools/: Cargo.toml
crates/coda_tools/src/: background.rs  fs.rs  glob.rs  grep.rs  lib.rs  process.rs  shell.rs  spec.rs  task.rs  todo.rs
crates/coda_tools/src/background/: archive_dir.rs  disk_tail.rs  manifest.rs  mod.rs  quota.rs  task_archive.rs  task_id.rs
docs/: async-hitl-client-server-design.md  async-hitl-design.md  session-session-optimized-gadget.md
docs/design/: background-task-output-spool.md  background-tasks.md  openrouter-provider.md
docs/implementation/: openrouter-provider.md
docs/requirement/: openrouter-provider.md
docs/specs/: 2026-07-13-websocket-jsonrpc.md  2026-07-20-freeform-reasoning-effort.md  2026-07-20-reasoning-effort-defaults.md
examples/: README.md  coda-server.toml
examples/workspace/: AGENTS.md
examples/workspace/.coda/: config.toml  mcp.json
examples/workspace/.coda/agents/: AGENT.md
examples/workspace/.coda/agents/coder/: AGENT.md
examples/workspace/.coda/agents/docs-writer/: AGENT.md
examples/workspace/.coda/agents/planner/: AGENT.md
examples/workspace/.coda/agents/researcher/: AGENT.md
examples/workspace/.coda/skills/code-review/: SKILL.md
examples/workspace/docs/: AGENTS.md
examples/workspace/docs/.coda/skills/changelog/: SKILL.md
scripts/: build-rpi.mts
src/: agent.rs  main.rs  system-prompt.md
src/agent/: tools.rs
src/agent/tools/: fs.rs  glob.rs  grep.rs  shell.rs  todo.rs
src/core/: llm.rs  mod.rs  session.rs  tool.rs
src/provider/: openai.rs
