[workspace]
members = [
  "crates/coda_core",
  "crates/coda_openai",
  "crates/coda_agent",
  "crates/coda_skills",
  "app/coda_cli",
]
resolver = "3"

[workspace.dependencies]
coda_agent = { path = "crates/coda_agent" }
coda_core = { path = "crates/coda_core" }
coda_openai = { path = "crates/coda_openai" }
coda_skills = { path = "crates/coda_skills" }
async-stream = "0.3"
either = "1.15.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["full"] }
schemars = "1.2.1"
