[workspace]
members = [
  "crates/coda_core",
  "crates/coda_openai",
  "crates/coda_agent",
  "crates/coda_skills",
  "crates/coda_mcp",
  "crates/coda_tools",
  "app/coda_server",
]
resolver = "3"

[workspace.dependencies]
coda_agent = { path = "crates/coda_agent" }
coda_core = { path = "crates/coda_core" }
coda_mcp = { path = "crates/coda_mcp" }
coda_openai = { path = "crates/coda_openai" }
coda_skills = { path = "crates/coda_skills" }
coda_tools = { path = "crates/coda_tools" }
async-stream = "0.3"
either = "1.15.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["full"] }
schemars = "1.2.1"
jiff = { version = "0.2", features = ["serde"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "v5"] }

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
codegen-units = 1
