[package]
name = "coda_server"
version = "0.1.0"
edition = "2024"

[dependencies]
coda_core = { workspace = true }
coda_agent = { workspace = true }
coda_openai = { workspace = true }
coda_skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
rustyline = "15"
