[package]
name = "coda_server"
version = "0.1.0"
edition = "2024"

[dependencies]
coda_core = { workspace = true }
coda_mcp = { workspace = true }
coda_openai = { workspace = true }
coda_agent = { workspace = true }
coda_skills = { workspace = true }
coda_tools = { workspace = true }
jiff = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
rustyline = "15"
toml_edit = "0.25"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "coda-server"
path = "src/bin/server.rs"

[[bin]]
name = "coda-client"
path = "src/bin/client.rs"
