[package]
name = "coda_server"
version = "0.1.0"
edition = "2024"

[dependencies]
coda_core = { workspace = true }
coda_mcp = { workspace = true }
coda_openai = { workspace = true }
coda_agent = { workspace = true }
coda_skills = { workspace = true }
coda_tools = { workspace = true }
jiff = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
schemars = { workspace = true }
toml_edit = "0.25"
axum = { version = "0.8", features = ["ws"] }
brush-parser = "0.4.0"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "coda-server"
path = "src/bin/server.rs"
