[package]
name = "coda_openai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.40.2", features = ["chat-completion", "byot"] }
async-stream = { workspace = true }
coda_core = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
