[package]
name = "coda_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { workspace = true }
coda_agent = { workspace = true }
coda_core = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.22", features = ["v4"] }
