[package]
name = "coda_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
coda_core = { workspace = true }
jiff = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tracing = { workspace = true }
